--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -19,22 +19,28 @@ body {
 
 header {
     background-color: var(--teal);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     height: var(--hfHeight);
     width: 100%;
 }
 
-header .header {
-    align-items: center;
-    display: flex;
-    flex-flow: column;
-    height: 100%;
-    justify-content: center;
+header h1 {
+    font-size: 36px;
     padding-left: var(--edgePadding);
+}
+
+header nav {
+    align-self: end;
+    justify-self: center;
     padding-right: var(--edgePadding);
 }
 
-header h1 {
-    font-size: 36px;
+header li {
+    display: inline;
+    font-size: 18px;
+    padding-right: 15px;
 }
 
 main {
@@ -82,6 +88,10 @@ main {
 
 .screenShot {
     width: 100%;
+}
+
+.contact {
+    border-top: solid black;
 }
 
 footer {
