--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -119,6 +119,18 @@ footer p {
 }
 
 @media screen and (max-width: 1200px) {
+    h1 {
+        font-size: 36px;
+    }
+
+    h2 {
+        font-size: 24px;
+    }
+
+    h3 {
+        font-size: 20px;
+    }
+
     .about, .portfolio, .contact {
         display: flex;
         flex-direction: column;
