--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -131,6 +131,10 @@ footer p {
         font-size: 20px;
     }
 
+    header li {
+        font-size: 18px;
+    }
+
     .about, .portfolio, .contact {
         display: flex;
         flex-direction: column;
